[gd_scene load_steps=8 format=3 uid="uid://dlya04ruxbe3f"]

[ext_resource type="Script" path="res://scene/instruction/BlockControl/SensorInstruction.gd" id="1_b5qhu"]
[ext_resource type="PackedScene" uid="uid://l3lvpw0vs5vw" path="res://scene/instruction/Base/BaseRow.tscn" id="2_hgmlt"]
[ext_resource type="PackedScene" uid="uid://pnn0iyl5fuil" path="res://scene/instruction/Base/BaseLine.tscn" id="3_k5pj3"]
[ext_resource type="Script" path="res://scene/instruction/Base/ColorLabel.gd" id="4_nw2jl"]
[ext_resource type="PackedScene" uid="uid://bnxr1d310gk3l" path="res://scene/instruction/Base/BaseLineColor.tscn" id="5_p5w4s"]
[ext_resource type="PackedScene" uid="uid://cxkqo32fuxva3" path="res://scene/instruction/Base/TextInput.tscn" id="6_r273m"]
[ext_resource type="PackedScene" uid="uid://cb6l6keyicm1c" path="res://scene/instruction/Base/SelectBox.tscn" id="7_cmwgi"]

[node name="SensorInstruction" type="Panel"]
script = ExtResource("1_b5qhu")

[node name="BaseRow" parent="." instance=ExtResource("2_hgmlt")]
layout_mode = 1

[node name="BaseLine" parent="BaseRow" instance=ExtResource("3_k5pj3")]
layout_mode = 1

[node name="ColorLabel" type="Label" parent="BaseRow/BaseLine"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Sensor"
script = ExtResource("4_nw2jl")

[node name="BaseLineColor" parent="BaseRow" instance=ExtResource("5_p5w4s")]
layout_mode = 1

[node name="TextInput" parent="BaseRow/BaseLineColor" instance=ExtResource("6_r273m")]
layout_mode = 1

[node name="Label" type="Label" parent="BaseRow/BaseLineColor"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "="
horizontal_alignment = 1
vertical_alignment = 1

[node name="SelectBox" parent="BaseRow/BaseLineColor" instance=ExtResource("7_cmwgi")]
layout_mode = 0

[node name="Label2" type="Label" parent="BaseRow/BaseLineColor"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "in"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextInput3" parent="BaseRow/BaseLineColor" instance=ExtResource("6_r273m")]
layout_mode = 1
